--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "mongodb": "^2.1.7",
     "mongoose": "^4.4.7",
     "node-restful": "^0.2.5",
     "path": "^0.12.7"
