--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "htmlparser2": "^3.9.0",
     "mongodb": "^2.1.7",
     "mongoose": "^4.4.7",
+    "ng-file-upload": "^12.0.4",
     "node-restful": "^0.2.5",
     "path": "^0.12.7",
     "request": "^2.69.0",
