--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular": "^1.5.2",
     "async": "^2.0.0-rc.3",
     "body-parser": "^1.15.0",
+    "csv-streamify": "^3.0.3",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "fs": "0.0.2",
